k8s/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boilerplate-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boilerplate-app
  template:
    metadata:
      labels:
        app: boilerplate-app
    spec:
      containers:
        - name: boilerplate
          image: boilerplate:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: boilerplate-svc
spec:
  selector:
    app: boilerplate-app
  ports:
  - port:  8080
    targetPort:  8080
  type:  LoadBalancer
